--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "sharp": "^0.25.4",
     "validator": "^13.1.1"
   }
 }
