--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.13.1",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
